<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- uuid list activity -->
    <string name="title_uuid_list">All UUID</string>
    <string name="title_rocker_ctrl">Rocker</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="change_uuid">Change UUID</string>
    <string name="rocker_ctrl">Rocker Controller</string>
    <string name="play_game">Game</string>

    <string name="btn_rocker">Rocker</string>
    <string name="btn_up">Up</string>
    <string name="btn_down">Down</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="btn_speed">Speed</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_light">Light</string>
    <string name="btn_sound">Sound</string>
</resources>
